glob获取pages多文件夹文件

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 			<div class="nav-bar container-1200">
 				<a href="">
 					<img src="./images/logo_nav.png">
+					<span>中移物联网办公门户</span>
 				</a>
 			</div>
 		</div>
